# legalchain-client

./: README.md  pyproject.toml
legalchain-client/: __init__.py  api_client.py
legalchain_api_client.egg-info/: PKG-INFO  SOURCES.txt
